--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -48,7 +48,11 @@
                 android:hint="Password"
                 android:inputType="textPassword" />
         </com.google.android.material.textfield.TextInputLayout>
-
+        <CheckBox
+            android:id="@+id/hidePassword"
+            android:layout_width="139dp"
+            android:layout_height="wrap_content"
+            android:text="Show Password" />
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_login"
             android:layout_width="fill_parent"
