--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:fitsSystemWindows="true">
@@ -11,14 +10,13 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:paddingLeft="24dp"
-        android:paddingTop="56dp"
+        android:paddingTop="16dp"
         android:paddingRight="24dp">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="92dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="24dp"
             android:src="@drawable/logo" />
 
         <!--  Name Label -->
@@ -26,7 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp">
+            >
 
             <EditText
                 android:id="@+id/input_Id"
@@ -41,7 +39,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp">
+            >
 
             <EditText
                 android:id="@+id/input_email"
@@ -52,25 +50,12 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <!-- Password Label -->
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp">
-
-            <EditText
-                android:id="@+id/input_password"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Password"
-                android:inputType="textPassword" />
-        </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp">
+            >
 
             <EditText
                 android:id="@+id/input_age"
@@ -79,6 +64,29 @@
                 android:hint="Age"
                 android:inputType="numberSigned" />
         </com.google.android.material.textfield.TextInputLayout>
+
+
+        <!-- Signup Button -->
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            >
+
+            <EditText
+                android:id="@+id/input_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Password"
+                android:inputType="textPassword"
+                />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <CheckBox
+            android:id="@+id/hidePassword"
+            android:layout_width="139dp"
+            android:layout_height="wrap_content"
+            android:text="Show Password" />
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -116,13 +124,13 @@
                     android:text="female" />
             </RadioGroup>
         </RelativeLayout>
-        <!-- Signup Button -->
+
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_signup"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:layout_marginBottom="24dp"
+            android:layout_marginBottom="8dp"
             android:padding="12dp"
             android:text="Create Account" />
 
