--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,7 +19,7 @@
             android:layout_marginBottom="24dp"
             android:src="@drawable/logo" />
 
-        <!-- Email Label -->
+        <!-- com.example.ratinadeticpro.data.model.Email Label -->
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
