--- a/app/src/main/res/layout/dashboard_fragment.xml
+++ b/app/src/main/res/layout/dashboard_fragment.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Ui.ui.DashBoard.DashboardFragment">
+    tools:context=".Ui.ui.Chart.ChartFragment">
 
     <com.github.mikephil.charting.charts.BarChart
         android:id="@+id/barchart"
