--- a/app/src/main/res/layout/predict_fragment.xml
+++ b/app/src/main/res/layout/predict_fragment.xml
@@ -2,27 +2,36 @@
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".Ui.ui.predict.PredictFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".Ui.ui.predict.PredictFragment">
 
     <!--ImageView where image will be set-->
     <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="92dp"
+        android:layout_marginTop="10dp"
+        android:layout_gravity="center_horizontal"
+        android:src="@drawable/logo" />
+
+    <!--Button to pick image-->
+    <ImageView
         android:id="@+id/image_view"
+android:layout_marginTop="90dp"
         android:layout_width="250dp"
         android:layout_height="250dp"
         android:layout_gravity="center_horizontal"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_image_black_24dp" />
-    <!--Button to pick image-->
+
     <Button
         android:id="@+id/img_pick_btn"
         style="@style/Base.Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="210dp"
+        android:layout_marginTop="300dp"
         android:text="Choose Image" />
 
     <RadioGroup
@@ -30,7 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="330dp"
+        android:layout_marginTop="370dp"
         android:orientation="horizontal">
 
         <RadioButton
@@ -52,7 +61,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="390dp"
+        android:layout_marginTop="420dp"
         android:enabled="false"
         android:text="Predict" />
 
