--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -126,7 +126,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:layout_marginBottom="8dp"
-            android:background="@color/colorAccent"
+            android:background="@drawable/buttomstyle"
             android:padding="12dp"
 
             android:text="Create Account" />
