--- a/app/src/main/res/layout/fragment_dash_borad_.xml
+++ b/app/src/main/res/layout/fragment_dash_borad_.xml
@@ -14,7 +14,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="130dp"
+            android:layout_height="150dp"
             android:layout_marginBottom="50dp"
             android:background="@drawable/gradientbackground"
 
@@ -215,6 +215,39 @@
                         android:contentDescription="@string/aboutus"
                         app:srcCompat="@drawable/admin" />
                 </RelativeLayout>
+
+            </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="20dp"
+                android:layout_weight="1">
+
+                <RelativeLayout
+                    android:id="@+id/btn_logout"
+                    android:layout_width="match_parent"
+
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:id="@+id/textView9"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/cycle1"
+                        android:layout_centerHorizontal="true"
+                        android:text="@string/logout"
+                        android:textSize="24sp" />
+
+                    <ImageView
+                        android:id="@+id/cycle1"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="15dp"
+                        android:contentDescription="@string/aboutus"
+                        app:srcCompat="@drawable/logout" />
+                </RelativeLayout>
+
             </androidx.cardview.widget.CardView>
 
 
