--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -18,25 +18,15 @@
             android:background="@color/colorAccent"
             android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/txt_date"
-                android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:layout_weight="1"
-                android:fontFamily="sans-serif-medium"
-                android:gravity="center"
 
-                android:text="date"
-                android:textColor="@color/wight"
-                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/txt_type"
-                android:layout_width="0dp"
+                android:layout_width="65dp"
                 android:layout_height="50dp"
-                android:layout_weight="1"
                 android:fontFamily="sans-serif-medium"
                 android:gravity="center"
+                android:paddingLeft="20dp"
                 android:text="type"
                 android:textColor="@color/wight"
                 android:textSize="16sp" />
@@ -49,6 +39,17 @@
                 android:fontFamily="sans-serif-medium"
                 android:gravity="center"
                 android:text="eye side"
+                android:textColor="@color/wight"
+                android:textSize="16sp" />
+            <TextView
+                android:id="@+id/txt_date"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:fontFamily="sans-serif-medium"
+                android:gravity="center"
+
+                android:text="date"
                 android:textColor="@color/wight"
                 android:textSize="16sp" />
         </LinearLayout>
