--- a/app/src/main/res/layout/list_history.xml
+++ b/app/src/main/res/layout/list_history.xml
@@ -21,7 +21,30 @@
             android:layout_height="wrap_content"
             android:background="?attr/selectableItemBackground"
             android:orientation="horizontal">
+            <TextView
+                android:id="@+id/txt_type"
+                android:layout_width="65dp"
+                android:layout_height="60dp"
+                android:background="@drawable/cercleshape"
+                android:fontFamily="sans-serif-medium"
+                android:gravity="center"
 
+                android:text="@{listModel.prediction}"
+                android:textColor="@color/wight"
+                android:textSize="16sp"
+                tools:text="dURSUN" />
+
+            <TextView
+                android:id="@+id/txt_eyepart"
+                android:layout_width="0dp"
+                android:layout_height="90dp"
+                android:layout_weight="1"
+                android:fontFamily="sans-serif-medium"
+                android:gravity="center"
+                android:text="@{listModel.eye_part}"
+                android:textColor="@color/black_overlay"
+                android:textSize="16sp"
+                tools:text="eye part" />
 
             <TextView
                 android:id="@+id/txt_date"
@@ -35,29 +58,8 @@
                 android:textSize="16sp"
                 tools:text="date" />
 
-            <TextView
-                android:id="@+id/txt_type"
-                android:layout_width="0dp"
-                android:layout_height="90dp"
-                android:layout_weight="1"
-                android:fontFamily="sans-serif-medium"
-                android:gravity="center"
-                android:text="@{listModel.prediction}"
-                android:textColor="@color/black_overlay"
-                android:textSize="16sp"
-                tools:text="type" />
 
-            <TextView
-                android:id="@+id/txt_eyepart"
-                android:layout_width="0dp"
-                android:layout_height="90dp"
-                android:layout_weight="1"
-                android:fontFamily="sans-serif-medium"
-                android:gravity="center"
-                android:text="@{listModel.eye_part}"
-                android:textColor="@color/black_overlay"
-                android:textSize="16sp"
-                tools:text="eye part" />
+
         </LinearLayout>
 
         <TextView
