--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,17 +9,16 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:paddingLeft="24dp"
-        android:paddingTop="56dp"
+        android:paddingTop="16dp"
         android:paddingRight="24dp">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="92dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="24dp"
+            android:layout_marginBottom="8dp"
             android:src="@drawable/logo" />
 
-        <!-- com.example.ratinadeticpro.data.model.Email Label -->
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -30,8 +29,9 @@
                 android:id="@+id/input_id_login"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Card ID"
-                android:inputType="textEmailAddress" />
+                android:hint="@string/card_id"
+                android:inputType="textEmailAddress"
+                 />
         </com.google.android.material.textfield.TextInputLayout>
 
         <!-- Password Label -->
@@ -45,14 +45,16 @@
                 android:id="@+id/input_password_login"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Password"
+                android:hint="@string/password"
                 android:inputType="textPassword" />
         </com.google.android.material.textfield.TextInputLayout>
+
         <CheckBox
             android:id="@+id/hidePassword"
             android:layout_width="139dp"
             android:layout_height="wrap_content"
-            android:text="Show Password" />
+            android:text="@string/show_password" />
+
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_login"
             android:layout_width="fill_parent"
@@ -61,16 +63,25 @@
             android:layout_marginBottom="24dp"
             android:background="@drawable/buttomstyle"
             android:padding="12dp"
-            android:text="Login" />
+            android:text="@string/login" />
 
         <TextView
             android:id="@+id/link_signup"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
+            android:gravity="center"
+            android:text="@string/no_account_yet_create_one"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/link_researcher"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
             android:gravity="center"
-            android:text="No account yet? Create one"
-            android:textSize="16dip" />
+            android:text="@string/are_you_a_researcher_click_here"
+            android:textSize="16sp" />
 
     </LinearLayout>
 </ScrollView>
