--- a/app/src/main/res/navigation/nav_graph_1.xml
+++ b/app/src/main/res/navigation/nav_graph_1.xml
@@ -15,38 +15,42 @@
             app:enterAnim="@anim/slide_in_left"
             app:exitAnim="@anim/slide_out_right"
             app:popEnterAnim="@anim/slide_in_right"
-            app:popExitAnim="@anim/slide_out_left"/>
+            app:popExitAnim="@anim/slide_out_left" />
         <action
             android:id="@+id/action_dashBoradFrag_to_chartFragment"
             app:destination="@id/dashboardFragment2"
             app:enterAnim="@anim/slide_in_left"
             app:exitAnim="@anim/slide_out_right"
             app:popEnterAnim="@anim/slide_in_right"
-            app:popExitAnim="@anim/slide_out_left"/>
+            app:popExitAnim="@anim/slide_out_left" />
         <action
             android:id="@+id/action_dashBoradFrag_to_historyFragment"
             app:destination="@id/historyFragment"
             app:enterAnim="@anim/slide_in_left"
             app:exitAnim="@anim/slide_out_right"
             app:popEnterAnim="@anim/slide_in_right"
-            app:popExitAnim="@anim/slide_out_left"/>
+            app:popExitAnim="@anim/slide_out_left" />
         <action
             android:id="@+id/action_dashBoradFrag_to_profileFragment"
             app:destination="@id/profileFragment"
             app:enterAnim="@anim/slide_in_left"
             app:exitAnim="@anim/slide_out_right"
             app:popEnterAnim="@anim/slide_in_right"
-            app:popExitAnim="@anim/slide_out_left"/>
+            app:popExitAnim="@anim/slide_out_left" />
         <action
             android:id="@+id/action_dashBoradFrag_to_aboutUsFragment"
             app:destination="@id/aboutUsFragment"
             app:enterAnim="@anim/slide_in_left"
             app:exitAnim="@anim/slide_out_right"
             app:popEnterAnim="@anim/slide_in_right"
-            app:popExitAnim="@anim/slide_out_left"/>
+            app:popExitAnim="@anim/slide_out_left" />
         <action
             android:id="@+id/action_dashBoradFrag_to_loginActivity2"
             app:destination="@id/loginActivity2"
+            app:enterAnim="@anim/slide_in_left"
+            app:exitAnim="@anim/slide_out_right"
+            app:popEnterAnim="@anim/slide_in_right"
+            app:popExitAnim="@anim/slide_out_left"
             app:popUpTo="@+id/loginActivity2" />
     </fragment>
     <fragment
@@ -60,14 +64,14 @@
             app:enterAnim="@anim/slide_in_left"
             app:exitAnim="@anim/slide_out_right"
             app:popEnterAnim="@anim/slide_in_right"
-            app:popExitAnim="@anim/slide_out_left"/>
+            app:popExitAnim="@anim/slide_out_left" />
         <action
             android:id="@+id/action_predictFragment2_to_dashBoradFrag"
             app:destination="@id/dashBoradFrag"
             app:enterAnim="@anim/slide_in_left"
             app:exitAnim="@anim/slide_out_right"
             app:popEnterAnim="@anim/slide_in_right"
-            app:popExitAnim="@anim/slide_out_left"/>
+            app:popExitAnim="@anim/slide_out_left" />
     </fragment>
     <fragment
         android:id="@+id/resultFragment2"
@@ -78,57 +82,57 @@
         android:id="@+id/dashboardFragment2"
         android:name="com.example.ratinadeticpro.Ui.ui.Chart.ChartFragment"
         android:label="dashboard_fragment"
-        tools:layout="@layout/chart_fragment" >
+        tools:layout="@layout/chart_fragment">
         <action
             android:id="@+id/action_dashboardFragment2_to_dashBoradFrag"
             app:destination="@id/dashBoradFrag"
             app:enterAnim="@anim/slide_in_left"
             app:exitAnim="@anim/slide_out_right"
             app:popEnterAnim="@anim/slide_in_right"
-            app:popExitAnim="@anim/slide_out_left"/>
+            app:popExitAnim="@anim/slide_out_left" />
     </fragment>
     <fragment
         android:id="@+id/historyFragment"
-        tools:layout="@layout/fragment_history"
         android:name="com.example.ratinadeticpro.Ui.ui.History.HistoryFragment"
-        android:label="HistoryFragment" >
+        android:label="HistoryFragment"
+        tools:layout="@layout/fragment_history">
         <action
             android:id="@+id/action_historyFragment_to_dashBoradFrag"
             app:destination="@id/dashBoradFrag"
             app:enterAnim="@anim/slide_in_left"
             app:exitAnim="@anim/slide_out_right"
             app:popEnterAnim="@anim/slide_in_right"
-            app:popExitAnim="@anim/slide_out_left"/>
+            app:popExitAnim="@anim/slide_out_left" />
     </fragment>
     <fragment
         android:id="@+id/profileFragment"
         android:name="com.example.ratinadeticpro.Ui.ui.Profile.ProfileFragment"
         android:label="fragment_profile"
-        tools:layout="@layout/fragment_profile" >
+        tools:layout="@layout/fragment_profile">
         <action
             android:id="@+id/action_profileFragment_to_dashBoradFrag"
             app:destination="@id/dashBoradFrag"
             app:enterAnim="@anim/slide_in_left"
             app:exitAnim="@anim/slide_out_right"
             app:popEnterAnim="@anim/slide_in_right"
-            app:popExitAnim="@anim/slide_out_left"/>
+            app:popExitAnim="@anim/slide_out_left" />
     </fragment>
     <fragment
         android:id="@+id/aboutUsFragment"
         android:name="com.example.ratinadeticpro.Ui.ui.AboutUs.AboutUsFragment"
         android:label="fragment_about_us"
-        tools:layout="@layout/fragment_about_us" >
+        tools:layout="@layout/fragment_about_us">
         <action
             android:id="@+id/action_aboutUsFragment_to_dashBoradFrag"
             app:destination="@id/dashBoradFrag"
             app:enterAnim="@anim/slide_in_left"
             app:exitAnim="@anim/slide_out_right"
             app:popEnterAnim="@anim/slide_in_right"
-            app:popExitAnim="@anim/slide_out_left"/>
+            app:popExitAnim="@anim/slide_out_left" />
     </fragment>
     <activity
         android:id="@+id/loginActivity2"
         android:name="com.example.ratinadeticpro.Ui.ui.Login.LoginActivity"
-        tools:layout="@layout/activity_login"
-        android:label="LoginActivity" />
+        android:label="LoginActivity"
+        tools:layout="@layout/activity_login" />
 </navigation>
