--- a/app/src/main/res/layout/activity_lunch_fragment.xml
+++ b/app/src/main/res/layout/activity_lunch_fragment.xml
@@ -8,7 +8,7 @@
 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".Ui.ui.signUp.MainActivity">
+        tools:context="com.ratinadeticpro.Ui.ui.signUp.MainActivity">
 
 
         <fragment
