--- a/app/src/main/res/layout/fragment_chart_by_age.xml
+++ b/app/src/main/res/layout/fragment_chart_by_age.xml
@@ -1,27 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".Ui.ui.ChartByAge.ChartByAgeFragment">
 
-    <com.github.mikephil.charting.charts.BarChart
-        android:id="@+id/barchart_age"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="57dp" />
+        android:orientation="vertical"
+        tools:context="com.example.ratinadeticpro.Ui.ui.ChartByAge">
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButtonAge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/ic_keyboard_backspace_black_24dp"
-        android:clickable="true"
-        android:focusable="true"
-        app:srcCompat="@drawable/ic_keyboard_backspace_black_24dp" />
-</FrameLayout>
+
+        <LinearLayout
+            android:id="@+id/linear"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@color/colorAccent"
+            android:orientation="horizontal">
+
+
+
+            <TextView
+                android:id="@+id/txt_type"
+                android:layout_width="65dp"
+                android:layout_height="50dp"
+                android:fontFamily="sans-serif-medium"
+                android:gravity="center"
+                android:paddingLeft="20dp"
+                android:text="type"
+                android:textColor="@color/wight"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/txt_eyepart"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:fontFamily="sans-serif-medium"
+                android:gravity="center"
+                android:layout_marginLeft="22dp"
+                android:text="eye side"
+                android:textColor="@color/wight"
+                android:textSize="16sp" />
+            <TextView
+                android:id="@+id/txt_date"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:fontFamily="sans-serif-medium"
+                android:gravity="center"
+
+                android:text="date"
+                android:textColor="@color/wight"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/my_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/linear"
+            android:padding="16dp"
+            android:scrollbars="vertical" />
+
+
+        <ImageView
+            android:id="@+id/img_noData"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:layout_gravity="center"
+            android:background="@drawable/nodata"
+            android:gravity="center_vertical"
+            android:visibility="invisible" />
+
+        <ProgressBar
+            android:id="@+id/prof"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_gravity="center"
+            android:visibility="visible" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/floatingActionButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/ic_keyboard_backspace_black_24dp"
+            android:clickable="true"
+            app:srcCompat="@drawable/ic_keyboard_backspace_black_24dp" />
+
+    </RelativeLayout>
+</layout>
 
