--- a/app/src/main/res/layout/list_research.xml
+++ b/app/src/main/res/layout/list_research.xml
@@ -1,12 +1,14 @@
+<?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
         <variable
-            name="listModel"
-            type="com.example.ratinadeticpro.data.db.PredictImgEntity" />
+            name="listOfPrediction"
+            type="com.example.ratinadeticpro.data.model.PredictImg"
 
+            />
     </data>
 
     <LinearLayout
@@ -21,6 +23,7 @@
             android:layout_height="wrap_content"
             android:background="?attr/selectableItemBackground"
             android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/txt_type"
                 android:layout_width="70dp"
@@ -29,10 +32,10 @@
                 android:fontFamily="sans-serif-medium"
                 android:gravity="center"
 
-                android:text="@{listModel.prediction}"
+                android:text="@{listOfPrediction.prediction}"
                 android:textColor="@color/wight"
                 android:textSize="16sp"
-                tools:text="dURSUN" />
+                tools:text="NORMAL" />
 
             <TextView
                 android:id="@+id/txt_eyepart"
@@ -41,7 +44,7 @@
                 android:layout_weight="1"
                 android:fontFamily="sans-serif-medium"
                 android:gravity="center"
-                android:text="@{listModel.eye_part}"
+                android:text="@{listOfPrediction.eye_part}"
                 android:textColor="@color/black_overlay"
                 android:textSize="16sp"
                 tools:text="eye part" />
@@ -53,11 +56,10 @@
                 android:layout_weight="1"
                 android:fontFamily="sans-serif-medium"
                 android:gravity="center"
-                android:text="@{listModel.date}"
+                android:text="@{listOfPrediction.date}"
                 android:textColor="@color/black_overlay"
                 android:textSize="16sp"
                 tools:text="date" />
-
 
 
         </LinearLayout>
@@ -69,9 +71,9 @@
             android:fontFamily="sans-serif-medium"
             android:gravity="center"
             android:paddingBottom="16dp"
-            android:text='@{"probability : "+ listModel.probability}'
+            android:text='@{"gender : "+ listOfPrediction.gender}'
             android:textColor="@color/black_overlay"
             android:textSize="16sp"
-            tools:text="probability" />
+            tools:text="Gender" />
     </LinearLayout>
 </layout>
